# aidbox

./: .gitignore  README.md  docker-compose.yaml  env-sample.txt  pyproject.toml
scripts/: chat.py  web_server.py
src/chat/: __init__.py  interface.py
src/mcp/: __init__.py  client.py
src/static/: chat.js  style.css
src/templates/: chat.html
src/utils/: console.py  explorer.py
src/web/: app.py
tests/chat/: test_interface.py
tests/mcp/: test_client.py
tests/web/: test_app.py
